Sponsorship Opportunities sec margin fix on tablet

--- a/css/style.css
+++ b/css/style.css
@@ -1525,7 +1525,7 @@ Sponsors Section
 	width: 495px;
 	height: 495px;
 	right: 25%;
-	top: 9%;
+	top: 4%;
 	border: 10px solid;
 	-moz-border-image: -moz-linear-gradient(bottom left, #8dd53f 0%, #1fddff 100%);
     -webkit-border-image: -webkit-linear-gradient(bottom left, #8dd53f 0%, #1fddff 100%);
